src/C_parser.output
Terminals unused in grammar

   T_STRING


State 271 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: TRANSLATION_UNIT

    2 PRIMARY_EXPRESSION: T_VARIABLE
    3                   | T_INTEGER
    4                   | T_LBRACKET EXPR T_RBRACKET

    5 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
    6                   | POSTFIX_EXPRESSION T_LSBRACKET EXPR T_RSBRACKET
    7                   | POSTFIX_EXPRESSION T_LBRACKET T_RBRACKET
    8                   | POSTFIX_EXPRESSION T_LBRACKET ARGUMENT_EXP_LIST T_RBRACKET
    9                   | POSTFIX_EXPRESSION '.' T_VARIABLE
   10                   | POSTFIX_EXPRESSION T_INC_OP
   11                   | POSTFIX_EXPRESSION T_DEC_OP

   12 ARGUMENT_EXP_LIST: ASSIGNMENT_EXPRESSION
   13                  | ARGUMENT_EXP_LIST T_COMMA ASSIGNMENT_EXPRESSION

   14 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   15                 | T_INC_OP UNARY_EXPRESSION
   16                 | T_DEC_OP UNARY_EXPRESSION
   17                 | UNARY CAST_EXPRESSION

   18 UNARY: T_AND_OP
   19      | T_TIMES
   20      | T_PLUS
   21      | T_MINUS
   22      | T_NOT
   23      | T_TILDA

   24 CAST_EXPRESSION: UNARY_EXPRESSION
   25                | T_LBRACKET SPECIFIER_QUALIFIER_LIST T_RBRACKET CAST_EXPRESSION

   26 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
   27                          | MULTIPLICATIVE_EXPRESSION T_TIMES CAST_EXPRESSION
   28                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE CAST_EXPRESSION
   29                          | MULTIPLICATIVE_EXPRESSION T_MOD CAST_EXPRESSION

   30 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   31                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
   32                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

   33 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   34                 | SHIFT_EXPRESSION T_LEFT_OP ADDITIVE_EXPRESSION
   35                 | SHIFT_EXPRESSION T_RIGHT_OP ADDITIVE_EXPRESSION

   36 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   37                      | RELATIONAL_EXPRESSION T_LT SHIFT_EXPRESSION
   38                      | RELATIONAL_EXPRESSION T_GT SHIFT_EXPRESSION
   39                      | RELATIONAL_EXPRESSION T_LE_OP SHIFT_EXPRESSION
   40                      | RELATIONAL_EXPRESSION T_GE_OP SHIFT_EXPRESSION

   41 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   42                    | EQUALITY_EXPRESSION T_EQUALTO RELATIONAL_EXPRESSION
   43                    | EQUALITY_EXPRESSION T_NOT_EQUALTO RELATIONAL_EXPRESSION

   44 AND_EXPRESSION: EQUALITY_EXPRESSION
   45               | AND_EXPRESSION T_AND_OP EQUALITY_EXPRESSION

   46 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   47                        | EXCLUSIVE_OR_EXPRESSION T_XOR_OP AND_EXPRESSION

   48 BITWISE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   49                      | BITWISE_OR_EXPRESSION T_OR_OP EXCLUSIVE_OR_EXPRESSION

   50 LOGICAL_AND_EXPRESSION: BITWISE_OR_EXPRESSION
   51                       | LOGICAL_AND_EXPRESSION T_LOGICAL_AND_OP BITWISE_OR_EXPRESSION

   52 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   53                      | LOGICAL_OR_EXPRESSION T_LOGICAL_OR_OP LOGICAL_AND_EXPRESSION

   54 ASSIGNMENT_EXPRESSION: LOGICAL_OR_EXPRESSION
   55                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

   56 ASSIGNMENT_OPERATOR: T_ASS
   57                    | MUL_ASSIGN
   58                    | DIV_ASSIGN
   59                    | MOD_ASSIGN
   60                    | ADD_ASSIGN
   61                    | SUB_ASSIGN
   62                    | LEFT_ASSIGN
   63                    | RIGHT_ASSIGN
   64                    | AND_ASSIGN
   65                    | XOR_ASSIGN
   66                    | OR_ASSIGN

   67 EXPR: ASSIGNMENT_EXPRESSION
   68     | EXPR T_COMMA ASSIGNMENT_EXPRESSION

   69 DECLARATION: DECLARATION_SPECIFIERS T_SEMICOLON
   70            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SEMICOLON

   71 DECLARATION_SPECIFIERS: T_TYPEDEF
   72                       | T_TYPEDEF DECLARATION_SPECIFIERS
   73                       | TYPE_SPECIFIER
   74                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS

   75 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   76                     | INIT_DECLARATOR_LIST T_COMMA INIT_DECLARATOR

   77 INIT_DECLARATOR: DECLARATOR
   78                | DECLARATOR T_ASS INITIALISER

   79 TYPE_SPECIFIER: T_VOID
   80               | T_CHAR
   81               | T_INT
   82               | T_FLOAT
   83               | T_DOUBLE
   84               | T_UNSIGNED
   85               | STRUCT_SPECIFIER
   86               | ENUM_SPECIFIER

   87 STRUCT_SPECIFIER: STRUCT T_VARIABLE T_LCBRACKET STRUCT_DECLARATION_LIST T_RCBRACKET
   88                 | STRUCT T_LCBRACKET STRUCT_DECLARATION_LIST T_RCBRACKET
   89                 | STRUCT T_VARIABLE

   90 STRUCT_DECLARATION_LIST: STRUCT_DECLARATION
   91                        | STRUCT_DECLARATION_LIST STRUCT_DECLARATION

   92 STRUCT_DECLARATION: SPECIFIER_QUALIFIER_LIST STRUCT_DECLARATOR_LIST T_SEMICOLON

   93 SPECIFIER_QUALIFIER_LIST: TYPE_SPECIFIER SPECIFIER_QUALIFIER_LIST
   94                         | TYPE_SPECIFIER

   95 STRUCT_DECLARATOR_LIST: STRUCT_DECLARATOR
   96                       | STRUCT_DECLARATOR_LIST T_COMMA STRUCT_DECLARATOR

   97 STRUCT_DECLARATOR: DECLARATOR
   98                  | T_COLON LOGICAL_OR_EXPRESSION
   99                  | DECLARATOR T_COLON LOGICAL_OR_EXPRESSION

  100 ENUM_SPECIFIER: T_ENUM T_LCBRACKET ENUMERATOR_LIST T_RCBRACKET
  101               | T_ENUM T_VARIABLE T_LCBRACKET ENUMERATOR_LIST T_RCBRACKET
  102               | T_ENUM T_VARIABLE

  103 ENUMERATOR_LIST: ENUMERATOR
  104                | ENUMERATOR_LIST T_COMMA ENUMERATOR

  105 ENUMERATOR: T_VARIABLE
  106           | T_VARIABLE T_ASS LOGICAL_OR_EXPRESSION

  107 DECLARATOR: POINTER DIRECT_DECLARATOR
  108           | DIRECT_DECLARATOR

  109 DIRECT_DECLARATOR: T_VARIABLE
  110                  | T_LBRACKET DECLARATOR T_RBRACKET
  111                  | DIRECT_DECLARATOR T_LSBRACKET LOGICAL_OR_EXPRESSION T_RSBRACKET
  112                  | DIRECT_DECLARATOR T_LSBRACKET T_RSBRACKET
  113                  | DIRECT_DECLARATOR T_LBRACKET PARAMETER_LIST T_RBRACKET
  114                  | DIRECT_DECLARATOR T_LBRACKET IDENTIFIER_LIST T_RBRACKET
  115                  | DIRECT_DECLARATOR T_LBRACKET T_RBRACKET

  116 POINTER: T_TIMES
  117        | T_TIMES POINTER

  118 PARAMETER_LIST: PARAMETER_DECLARATION
  119               | PARAMETER_LIST T_COMMA PARAMETER_DECLARATION

  120 PARAMETER_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR
  121                      | DECLARATION_SPECIFIERS

  122 IDENTIFIER_LIST: T_VARIABLE
  123                | IDENTIFIER_LIST T_COMMA T_VARIABLE

  124 INITIALISER: ASSIGNMENT_EXPRESSION
  125            | T_LCBRACKET INITIALISER_LIST T_RCBRACKET
  126            | T_LCBRACKET INITIALISER_LIST T_COMMA T_RCBRACKET

  127 INITIALISER_LIST: INITIALISER
  128                 | INITIALISER_LIST T_COMMA INITIALISER

  129 STATEMENT: LABELED_STATEMENT
  130          | COMPOUND_STATEMENT
  131          | EXPRESSION_STATEMENT
  132          | CONDITIONAL
  133          | ITERATION_STATEMENT
  134          | JUMP

  135 LABELED_STATEMENT: T_VARIABLE T_COLON STATEMENT
  136                  | T_CASE LOGICAL_OR_EXPRESSION T_COLON STATEMENT
  137                  | T_DEFAULT T_COLON STATEMENT

  138 COMPOUND_STATEMENT: T_LCBRACKET T_RCBRACKET
  139                   | T_LCBRACKET STATEMENT_LIST T_RCBRACKET
  140                   | T_LCBRACKET DECLARATION_LIST T_RCBRACKET
  141                   | T_LCBRACKET DECLARATION_LIST STATEMENT_LIST T_RCBRACKET

  142 DECLARATION_LIST: DECLARATION
  143                 | DECLARATION_LIST DECLARATION

  144 STATEMENT_LIST: STATEMENT
  145               | STATEMENT_LIST STATEMENT

  146 EXPRESSION_STATEMENT: T_SEMICOLON
  147                     | EXPR T_SEMICOLON

  148 CONDITIONAL: T_IF T_LBRACKET EXPR T_RBRACKET STATEMENT
  149            | T_IF T_LBRACKET EXPR T_RBRACKET STATEMENT T_ELSE STATEMENT
  150            | T_SWITCH T_LBRACKET EXPR T_RBRACKET STATEMENT

  151 ITERATION_STATEMENT: T_WHILE T_LBRACKET EXPR T_RBRACKET STATEMENT
  152                    | DO STATEMENT T_WHILE T_LBRACKET EXPR T_RBRACKET T_SEMICOLON
  153                    | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT T_RBRACKET STATEMENT
  154                    | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT EXPR T_RBRACKET STATEMENT

  155 JUMP: T_CONTINUE T_SEMICOLON
  156     | T_BREAK T_SEMICOLON
  157     | T_RETURN T_SEMICOLON
  158     | T_RETURN EXPR T_SEMICOLON

  159 TRANSLATION_UNIT: EXTERNAL_DECLARATION
  160                 | TRANSLATION_UNIT EXTERNAL_DECLARATION

  161 EXTERNAL_DECLARATION: FUNCTION_DEFINITION
  162                     | DECLARATION

  163 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  164                    | DECLARATION_SPECIFIERS DECLARATOR COMPOUND_STATEMENT
  165                    | DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  166                    | DECLARATOR COMPOUND_STATEMENT


Terminals, with rules where they appear

$end (0) 0
'.' (46) 9
error (256)
T_VARIABLE (258) 2 9 87 89 101 102 105 106 109 122 123 135
T_INTEGER (259) 3
T_STRING (260)
T_TYPEDEF (261) 71 72
T_INC_OP (262) 10 15
T_DEC_OP (263) 11 16
T_LEFT_OP (264) 34
T_RIGHT_OP (265) 35
T_LE_OP (266) 39
T_GE_OP (267) 40
T_GT (268) 38
T_LT (269) 37
T_EQUALTO (270) 42
T_NOT_EQUALTO (271) 43
T_TIMES (272) 19 27 116 117
T_PLUS (273) 20 31
T_MINUS (274) 21 32
T_DIVIDE (275) 28
T_NOT (276) 22
T_XOR_OP (277) 47
T_TILDA (278) 23
T_COMMA (279) 13 68 76 96 104 119 123 126 128
T_SEMICOLON (280) 69 70 92 146 147 152 155 156 157 158
T_LBRACKET (281) 4 7 8 25 110 113 114 115 148 149 150 151 152 153 154
T_RBRACKET (282) 4 7 8 25 110 113 114 115 148 149 150 151 152 153 154
T_ASS (283) 56 78 106
T_LCBRACKET (284) 87 88 100 101 125 126 138 139 140 141
T_RCBRACKET (285) 87 88 100 101 125 126 138 139 140 141
T_LSBRACKET (286) 6 111 112
T_RSBRACKET (287) 6 111 112
T_COLON (288) 98 99 135 136 137
T_AND_OP (289) 18 45
T_OR_OP (290) 49
T_LOGICAL_AND_OP (291) 51
T_LOGICAL_OR_OP (292) 53
MUL_ASSIGN (293) 57
DIV_ASSIGN (294) 58
MOD_ASSIGN (295) 59
ADD_ASSIGN (296) 60
SUB_ASSIGN (297) 61
LEFT_ASSIGN (298) 62
RIGHT_ASSIGN (299) 63
AND_ASSIGN (300) 64
XOR_ASSIGN (301) 65
OR_ASSIGN (302) 66
T_MOD (303) 29
T_CHAR (304) 80
T_INT (305) 81
T_UNSIGNED (306) 84
T_FLOAT (307) 82
T_DOUBLE (308) 83
T_VOID (309) 79
STRUCT (310) 87 88 89
T_ENUM (311) 100 101 102
T_CASE (312) 136
T_DEFAULT (313) 137
T_IF (314) 148 149
T_ELSE (315) 149
T_SWITCH (316) 150
T_WHILE (317) 151 152
DO (318) 152
T_CONTINUE (319) 155
T_BREAK (320) 156
T_RETURN (321) 157 158
T_FOR (322) 153 154


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
ROOT (70)
    on left: 1, on right: 0
PRIMARY_EXPRESSION (71)
    on left: 2 3 4, on right: 5
POSTFIX_EXPRESSION (72)
    on left: 5 6 7 8 9 10 11, on right: 6 7 8 9 10 11 14
ARGUMENT_EXP_LIST (73)
    on left: 12 13, on right: 8 13
UNARY_EXPRESSION (74)
    on left: 14 15 16 17, on right: 15 16 24 55
UNARY (75)
    on left: 18 19 20 21 22 23, on right: 17
CAST_EXPRESSION (76)
    on left: 24 25, on right: 17 25 26 27 28 29
MULTIPLICATIVE_EXPRESSION (77)
    on left: 26 27 28 29, on right: 27 28 29 30 31 32
ADDITIVE_EXPRESSION (78)
    on left: 30 31 32, on right: 31 32 33 34 35
SHIFT_EXPRESSION (79)
    on left: 33 34 35, on right: 34 35 36 37 38 39 40
RELATIONAL_EXPRESSION (80)
    on left: 36 37 38 39 40, on right: 37 38 39 40 41 42 43
EQUALITY_EXPRESSION (81)
    on left: 41 42 43, on right: 42 43 44 45
AND_EXPRESSION (82)
    on left: 44 45, on right: 45 46 47
EXCLUSIVE_OR_EXPRESSION (83)
    on left: 46 47, on right: 47 48 49
BITWISE_OR_EXPRESSION (84)
    on left: 48 49, on right: 49 50 51
LOGICAL_AND_EXPRESSION (85)
    on left: 50 51, on right: 51 52 53
LOGICAL_OR_EXPRESSION (86)
    on left: 52 53, on right: 53 54 98 99 106 111 136
ASSIGNMENT_EXPRESSION (87)
    on left: 54 55, on right: 12 13 55 67 68 124
ASSIGNMENT_OPERATOR (88)
    on left: 56 57 58 59 60 61 62 63 64 65 66, on right: 55
EXPR (89)
    on left: 67 68, on right: 4 6 68 147 148 149 150 151 152 154 158
DECLARATION (90)
    on left: 69 70, on right: 142 143 162
DECLARATION_SPECIFIERS (91)
    on left: 71 72 73 74, on right: 69 70 72 74 120 121 163 164
INIT_DECLARATOR_LIST (92)
    on left: 75 76, on right: 70 76
INIT_DECLARATOR (93)
    on left: 77 78, on right: 75 76
TYPE_SPECIFIER (94)
    on left: 79 80 81 82 83 84 85 86, on right: 73 74 93 94
STRUCT_SPECIFIER (95)
    on left: 87 88 89, on right: 85
STRUCT_DECLARATION_LIST (96)
    on left: 90 91, on right: 87 88 91
STRUCT_DECLARATION (97)
    on left: 92, on right: 90 91
SPECIFIER_QUALIFIER_LIST (98)
    on left: 93 94, on right: 25 92 93
STRUCT_DECLARATOR_LIST (99)
    on left: 95 96, on right: 92 96
STRUCT_DECLARATOR (100)
    on left: 97 98 99, on right: 95 96
ENUM_SPECIFIER (101)
    on left: 100 101 102, on right: 86
ENUMERATOR_LIST (102)
    on left: 103 104, on right: 100 101 104
ENUMERATOR (103)
    on left: 105 106, on right: 103 104
DECLARATOR (104)
    on left: 107 108, on right: 77 78 97 99 110 120 163 164 165 166
DIRECT_DECLARATOR (105)
    on left: 109 110 111 112 113 114 115, on right: 107 108 111 112
    113 114 115
POINTER (106)
    on left: 116 117, on right: 107 117
PARAMETER_LIST (107)
    on left: 118 119, on right: 113 119
PARAMETER_DECLARATION (108)
    on left: 120 121, on right: 118 119
IDENTIFIER_LIST (109)
    on left: 122 123, on right: 114 123
INITIALISER (110)
    on left: 124 125 126, on right: 78 127 128
INITIALISER_LIST (111)
    on left: 127 128, on right: 125 126 128
STATEMENT (112)
    on left: 129 130 131 132 133 134, on right: 135 136 137 144 145
    148 149 150 151 152 153 154
LABELED_STATEMENT (113)
    on left: 135 136 137, on right: 129
COMPOUND_STATEMENT (114)
    on left: 138 139 140 141, on right: 130 163 164 165 166
DECLARATION_LIST (115)
    on left: 142 143, on right: 140 141 143 163 165
STATEMENT_LIST (116)
    on left: 144 145, on right: 139 141 145
EXPRESSION_STATEMENT (117)
    on left: 146 147, on right: 131 153 154
CONDITIONAL (118)
    on left: 148 149 150, on right: 132
ITERATION_STATEMENT (119)
    on left: 151 152 153 154, on right: 133
JUMP (120)
    on left: 155 156 157 158, on right: 134
TRANSLATION_UNIT (121)
    on left: 159 160, on right: 1 160
EXTERNAL_DECLARATION (122)
    on left: 161 162, on right: 159 160
FUNCTION_DEFINITION (123)
    on left: 163 164 165 166, on right: 161


State 0

    0 $accept: . ROOT $end

    T_VARIABLE  shift, and go to state 1
    T_TYPEDEF   shift, and go to state 2
    T_TIMES     shift, and go to state 3
    T_LBRACKET  shift, and go to state 4
    T_CHAR      shift, and go to state 5
    T_INT       shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    T_FLOAT     shift, and go to state 8
    T_DOUBLE    shift, and go to state 9
    T_VOID      shift, and go to state 10
    STRUCT      shift, and go to state 11
    T_ENUM      shift, and go to state 12

    ROOT                    go to state 13
    DECLARATION             go to state 14
    DECLARATION_SPECIFIERS  go to state 15
    TYPE_SPECIFIER          go to state 16
    STRUCT_SPECIFIER        go to state 17
    ENUM_SPECIFIER          go to state 18
    DECLARATOR              go to state 19
    DIRECT_DECLARATOR       go to state 20
    POINTER                 go to state 21
    TRANSLATION_UNIT        go to state 22
    EXTERNAL_DECLARATION    go to state 23
    FUNCTION_DEFINITION     go to state 24


State 1

  109 DIRECT_DECLARATOR: T_VARIABLE .

    $default  reduce using rule 109 (DIRECT_DECLARATOR)


State 2

   71 DECLARATION_SPECIFIERS: T_TYPEDEF .
   72                       | T_TYPEDEF . DECLARATION_SPECIFIERS

    T_TYPEDEF   shift, and go to state 2
    T_CHAR      shift, and go to state 5
    T_INT       shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    T_FLOAT     shift, and go to state 8
    T_DOUBLE    shift, and go to state 9
    T_VOID      shift, and go to state 10
    STRUCT      shift, and go to state 11
    T_ENUM      shift, and go to state 12

    $default  reduce using rule 71 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS  go to state 25
    TYPE_SPECIFIER          go to state 16
    STRUCT_SPECIFIER        go to state 17
    ENUM_SPECIFIER          go to state 18


State 3

  116 POINTER: T_TIMES .
  117        | T_TIMES . POINTER

    T_TIMES  shift, and go to state 3

    $default  reduce using rule 116 (POINTER)

    POINTER  go to state 26


State 4

  110 DIRECT_DECLARATOR: T_LBRACKET . DECLARATOR T_RBRACKET

    T_VARIABLE  shift, and go to state 1
    T_TIMES     shift, and go to state 3
    T_LBRACKET  shift, and go to state 4

    DECLARATOR         go to state 27
    DIRECT_DECLARATOR  go to state 20
    POINTER            go to state 21


State 5

   80 TYPE_SPECIFIER: T_CHAR .

    $default  reduce using rule 80 (TYPE_SPECIFIER)


State 6

   81 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 81 (TYPE_SPECIFIER)


State 7

   84 TYPE_SPECIFIER: T_UNSIGNED .

    $default  reduce using rule 84 (TYPE_SPECIFIER)


State 8

   82 TYPE_SPECIFIER: T_FLOAT .

    $default  reduce using rule 82 (TYPE_SPECIFIER)


State 9

   83 TYPE_SPECIFIER: T_DOUBLE .

    $default  reduce using rule 83 (TYPE_SPECIFIER)


State 10

   79 TYPE_SPECIFIER: T_VOID .

    $default  reduce using rule 79 (TYPE_SPECIFIER)


State 11

   87 STRUCT_SPECIFIER: STRUCT . T_VARIABLE T_LCBRACKET STRUCT_DECLARATION_LIST T_RCBRACKET
   88                 | STRUCT . T_LCBRACKET STRUCT_DECLARATION_LIST T_RCBRACKET
   89                 | STRUCT . T_VARIABLE

    T_VARIABLE   shift, and go to state 28
    T_LCBRACKET  shift, and go to state 29


State 12

  100 ENUM_SPECIFIER: T_ENUM . T_LCBRACKET ENUMERATOR_LIST T_RCBRACKET
  101               | T_ENUM . T_VARIABLE T_LCBRACKET ENUMERATOR_LIST T_RCBRACKET
  102               | T_ENUM . T_VARIABLE

    T_VARIABLE   shift, and go to state 30
    T_LCBRACKET  shift, and go to state 31


State 13

    0 $accept: ROOT . $end

    $end  shift, and go to state 32


State 14

  162 EXTERNAL_DECLARATION: DECLARATION .

    $default  reduce using rule 162 (EXTERNAL_DECLARATION)


State 15

   69 DECLARATION: DECLARATION_SPECIFIERS . T_SEMICOLON
   70            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST T_SEMICOLON
  163 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS . DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  164                    | DECLARATION_SPECIFIERS . DECLARATOR COMPOUND_STATEMENT

    T_VARIABLE   shift, and go to state 1
    T_TIMES      shift, and go to state 3
    T_SEMICOLON  shift, and go to state 33
    T_LBRACKET   shift, and go to state 4

    INIT_DECLARATOR_LIST  go to state 34
    INIT_DECLARATOR       go to state 35
    DECLARATOR            go to state 36
    DIRECT_DECLARATOR     go to state 20
    POINTER               go to state 21


State 16

   73 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .
   74                       | TYPE_SPECIFIER . DECLARATION_SPECIFIERS

    T_TYPEDEF   shift, and go to state 2
    T_CHAR      shift, and go to state 5
    T_INT       shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    T_FLOAT     shift, and go to state 8
    T_DOUBLE    shift, and go to state 9
    T_VOID      shift, and go to state 10
    STRUCT      shift, and go to state 11
    T_ENUM      shift, and go to state 12

    $default  reduce using rule 73 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS  go to state 37
    TYPE_SPECIFIER          go to state 16
    STRUCT_SPECIFIER        go to state 17
    ENUM_SPECIFIER          go to state 18


State 17

   85 TYPE_SPECIFIER: STRUCT_SPECIFIER .

    $default  reduce using rule 85 (TYPE_SPECIFIER)


State 18

   86 TYPE_SPECIFIER: ENUM_SPECIFIER .

    $default  reduce using rule 86 (TYPE_SPECIFIER)


State 19

  165 FUNCTION_DEFINITION: DECLARATOR . DECLARATION_LIST COMPOUND_STATEMENT
  166                    | DECLARATOR . COMPOUND_STATEMENT

    T_TYPEDEF    shift, and go to state 2
    T_LCBRACKET  shift, and go to state 38
    T_CHAR       shift, and go to state 5
    T_INT        shift, and go to state 6
    T_UNSIGNED   shift, and go to state 7
    T_FLOAT      shift, and go to state 8
    T_DOUBLE     shift, and go to state 9
    T_VOID       shift, and go to state 10
    STRUCT       shift, and go to state 11
    T_ENUM       shift, and go to state 12

    DECLARATION             go to state 39
    DECLARATION_SPECIFIERS  go to state 40
    TYPE_SPECIFIER          go to state 16
    STRUCT_SPECIFIER        go to state 17
    ENUM_SPECIFIER          go to state 18
    COMPOUND_STATEMENT      go to state 41
    DECLARATION_LIST        go to state 42


State 20

  108 DECLARATOR: DIRECT_DECLARATOR .
  111 DIRECT_DECLARATOR: DIRECT_DECLARATOR . T_LSBRACKET LOGICAL_OR_EXPRESSION T_RSBRACKET
  112                  | DIRECT_DECLARATOR . T_LSBRACKET T_RSBRACKET
  113                  | DIRECT_DECLARATOR . T_LBRACKET PARAMETER_LIST T_RBRACKET
  114                  | DIRECT_DECLARATOR . T_LBRACKET IDENTIFIER_LIST T_RBRACKET
  115                  | DIRECT_DECLARATOR . T_LBRACKET T_RBRACKET

    T_LBRACKET   shift, and go to state 43
    T_LSBRACKET  shift, and go to state 44

    $default  reduce using rule 108 (DECLARATOR)


State 21

  107 DECLARATOR: POINTER . DIRECT_DECLARATOR

    T_VARIABLE  shift, and go to state 1
    T_LBRACKET  shift, and go to state 4

    DIRECT_DECLARATOR  go to state 45


State 22

    1 ROOT: TRANSLATION_UNIT .
  160 TRANSLATION_UNIT: TRANSLATION_UNIT . EXTERNAL_DECLARATION

    T_VARIABLE  shift, and go to state 1
    T_TYPEDEF   shift, and go to state 2
    T_TIMES     shift, and go to state 3
    T_LBRACKET  shift, and go to state 4
    T_CHAR      shift, and go to state 5
    T_INT       shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    T_FLOAT     shift, and go to state 8
    T_DOUBLE    shift, and go to state 9
    T_VOID      shift, and go to state 10
    STRUCT      shift, and go to state 11
    T_ENUM      shift, and go to state 12

    $default  reduce using rule 1 (ROOT)

    DECLARATION             go to state 14
    DECLARATION_SPECIFIERS  go to state 15
    TYPE_SPECIFIER          go to state 16
    STRUCT_SPECIFIER        go to state 17
    ENUM_SPECIFIER          go to state 18
    DECLARATOR              go to state 19
    DIRECT_DECLARATOR       go to state 20
    POINTER                 go to state 21
    EXTERNAL_DECLARATION    go to state 46
    FUNCTION_DEFINITION     go to state 24


State 23

  159 TRANSLATION_UNIT: EXTERNAL_DECLARATION .

    $default  reduce using rule 159 (TRANSLATION_UNIT)


State 24

  161 EXTERNAL_DECLARATION: FUNCTION_DEFINITION .

    $default  reduce using rule 161 (EXTERNAL_DECLARATION)


State 25

   72 DECLARATION_SPECIFIERS: T_TYPEDEF DECLARATION_SPECIFIERS .

    $default  reduce using rule 72 (DECLARATION_SPECIFIERS)


State 26

  117 POINTER: T_TIMES POINTER .

    $default  reduce using rule 117 (POINTER)


State 27

  110 DIRECT_DECLARATOR: T_LBRACKET DECLARATOR . T_RBRACKET

    T_RBRACKET  shift, and go to state 47


State 28

   87 STRUCT_SPECIFIER: STRUCT T_VARIABLE . T_LCBRACKET STRUCT_DECLARATION_LIST T_RCBRACKET
   89                 | STRUCT T_VARIABLE .

    T_LCBRACKET  shift, and go to state 48

    $default  reduce using rule 89 (STRUCT_SPECIFIER)


State 29

   88 STRUCT_SPECIFIER: STRUCT T_LCBRACKET . STRUCT_DECLARATION_LIST T_RCBRACKET

    T_CHAR      shift, and go to state 5
    T_INT       shift, and go to state 6
    T_UNSIGNED  shift, and go to state 7
    T_FLOAT     shift, and go to state 8
    T_DOUBLE    shift, and go to state 9
    T_VOID      shift, and go to state 10
    STRUCT      shift, and go to state 11
    T_ENUM      shift, and go to state 12

    TYPE_SPECIFIER            go to state 49
    STRUCT_SPECIFIER          go to state 17
    STRUCT_DECLARATION_LIST   go to state 50
    STRUCT_DECLARATION        go to state 51
    SPECIFIER_QUALIFIER_LIST  go to state 52
    ENUM_SPECIFIER            go to state 18


State 30

  101 ENUM_SPECIFIER: T_ENUM T_VARIABLE . T_LCBRACKET ENUMERATOR_LIST T_RCBRACKET
  102               | T_ENUM T_VARIABLE .

    T_LCBRACKET  shift, and go to state 53

    $default  reduce using rule 102 (ENUM_SPECIFIER)


State 31

  100 ENUM_SPECIFIER: T_ENUM T_LCBRACKET . ENUMERATOR_LIST T_RCBRACKET

    T_VARIABLE  shift, and go to state 54

    ENUMERATOR_LIST  go to state 55
    ENUMERATOR       go to state 56


State 32

    0 $accept: ROOT $end .

    $default  accept


State 33

   69 DECLARATION: DECLARATION_SPECIFIERS T_SEMICOLON .

    $default  reduce using rule 69 (DECLARATION)


State 34

   70 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST . T_SEMICOLON
   76 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST . T_COMMA INIT_DECLARATOR

    T_COMMA      shift, and go to state 57
    T_SEMICOLON  shift, and go to state 58


State 35

   75 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 75 (INIT_DECLARATOR_LIST)


State 36

   77 INIT_DECLARATOR: DECLARATOR .
   78                | DECLARATOR . T_ASS INITIALISER
  163 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR . DECLARATION_LIST COMPOUND_STATEMENT
  164                    | DECLARATION_SPECIFIERS DECLARATOR . COMPOUND_STATEMENT

    T_TYPEDEF    shift, and go to state 2
    T_ASS        shift, and go to state 59
    T_LCBRACKET  shift, and go to state 38
    T_CHAR       shift, and go to state 5
    T_INT        shift, and go to state 6
    T_UNSIGNED   shift, and go to state 7
    T_FLOAT      shift, and go to state 8
    T_DOUBLE     shift, and go to state 9
    T_VOID       shift, and go to state 10
    STRUCT       shift, and go to state 11
    T_ENUM       shift, and go to state 12

    $default  reduce using rule 77 (INIT_DECLARATOR)

    DECLARATION             go to state 39
    DECLARATION_SPECIFIERS  go to state 40
    TYPE_SPECIFIER          go to state 16
    STRUCT_SPECIFIER        go to state 17
    ENUM_SPECIFIER          go to state 18
    COMPOUND_STATEMENT      go to state 60
    DECLARATION_LIST        go to state 61


State 37

   74 DECLARATION_SPECIFIERS: TYPE_SPECIFIER DECLARATION_SPECIFIERS .

    $default  reduce using rule 74 (DECLARATION_SPECIFIERS)


State 38

  138 COMPOUND_STATEMENT: T_LCBRACKET . T_RCBRACKET
  139                   | T_LCBRACKET . STATEMENT_LIST T_RCBRACKET
  140                   | T_LCBRACKET . DECLARATION_LIST T_RCBRACKET
  141                   | T_LCBRACKET . DECLARATION_LIST STATEMENT_LIST T_RCBRACKET
